expenses added
